# redline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml  redline-report.schema.json  redline-suite.schema.json  redline.schema.json  server.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dogfood_feedback.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ai-session-dogfood-prompts.jsonl  benchmarks.md  calibration.md  case-studies.md  commands.md  dogfood.md  import-guides.md  internet-dogfood-sources.md  judges.md  launch.md  mcp.md  methodology.md  real-log-dogfood.md  release.md  repository.md  runners.md  troubleshooting.md  vision.md
examples/: anthropic_judge.sh  baseline.jsonl  calibration_baseline.jsonl  calibration_candidate.jsonl  candidate.jsonl  dogfood_baseline.jsonl  dogfood_candidate.jsonl  github-action.yml  litellm_judge.sh  openai_judge.sh  public_dogfood_baseline.jsonl  public_dogfood_candidate.jsonl  public_dogfood_sources.md  replay_candidate.py
examples/judges/: safety_rubric.md  support_rubric.md
prompts/: v2.txt
redline/: __init__.py  accept.py  audit.py  benchmark.py  cases.py  ci.py  cli.py  clusters.py  compare.py  config.py  dashboard.py  demo.py  diff.py  doctor.py  features.py  hashes.py  history.py  import_logs.py  io.py  judge.py  judge_templates.py  judgments.py  labels.py  mcp.py  middleware.py  policy.py  prompts.py  redact.py  replay.py  reports.py  requirements.py  runners.py  sbom.py  status.py  suite.py  summary.py  validate.py  watch.py
redline/judge_template_files/: extraction_rubric.md  judge_changed.py  litellm_judge.sh
redline/runner_templates/: anthropic_runner.sh  anthropic_watch_patch.py  jsonl_log_adapter.py  openai_runner.sh  openai_watch_patch.py
runners/: braintrust_suite_export.py  http_runner.py  jsonl_log_adapter.py  litellm_runner.sh  python_chain_runner.py  stdio_runner.py
scripts/: README.md  action_smoke.sh  build_release.sh  certify_release.sh  demo_gif.sh  demo_terminal.sh  normalize_ai_session_logs.py  release_check.sh
site/: index.html  styles.css
tests/: test_accept.py  test_audit.py  test_benchmark.py  test_calibration_examples.py  test_case_detail.py  test_cases.py  test_ci.py  test_cli_config.py  test_clusters.py  test_compare.py  test_config.py  test_dashboard.py  test_demo.py  test_diff.py  test_doctor.py  test_dogfood_examples.py  test_dogfood_normalizer.py  test_features.py  test_hashes.py  test_history.py  test_import_logs.py  test_io.py  test_judge.py  test_judge_examples.py  test_judge_templates.py  test_judgments.py  test_labels.py  test_mcp.py  test_middleware.py  test_packaging.py  test_policy.py  test_prompts.py  test_quickstart.py  test_redact.py  test_replay.py  test_reports.py  test_requirements.py  test_runners.py  test_sbom.py  test_site.py  (+5 more)
