[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redline-local"
version = "0.1.0"
description = "Local-first prompt regression diffs from existing JSONL logs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "evals", "prompts", "regression-testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gowtham0992/redline"
Repository = "https://github.com/gowtham0992/redline"
Issues = "https://github.com/gowtham0992/redline/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
redline = "redline.cli:main"

[tool.setuptools.packages.find]
include = ["redline*"]

[tool.setuptools.package-data]
redline = ["py.typed", "runner_templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
